# swarmflight

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: k2_5_swarm_reproduction_design.md  metrics.md  omo_adoption_minimal_design.md
src/swarmflight/: __init__.py  cli.py
src/swarmflight/benchmarks/: __init__.py  harness.py  models.py  policy.py
src/swarmflight/benchmarks/scenarios/: __init__.py  deep.py  mixed.py  wide.py
src/swarmflight/runtime/: __init__.py  actions.py  checkpoint.py  concurrency.py  events.py  hooks.py  mailbox.py  models.py  orchestrator.py  policy.py  trace.py  worker.py
tests/: test_benchmarks.py  test_checkpoint.py  test_cli.py  test_concurrency.py  test_hooks.py  test_mailbox.py  test_orchestrator.py  test_policy.py  test_scenarios.py  test_trace.py  test_worker.py
