[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmflight"
version = "0.1.0"
description = "Parallel agent swarm runtime for coding and research workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SwarmFlight Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
swarmflight = "swarmflight.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
